link with the style css file

--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- reset css CDN link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
+    <!-- css link -->
+    <link rel="stylesheet" href="./assests/style/style.css">
     <title>Your peptide template</title>
 </head>
 
 <body>
+    <header>
+        <section class="navigation-section">
 
+        </section>
+    </header>
 </body>
 
 </html>
