add Bebas Neu font

--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- reset css CDN link -->
+    <!-- reset CSS CDN link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.2/reset.min.css">
-    <!-- css link -->
+    <!-- Global Fonts links -->
+    <!-- Bebas Neue -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <!-- Main CSS link -->
     <link rel="stylesheet" href="./assests/style/style.css">
     <title>Your peptide template</title>
 </head>
