add logo as svg

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 <body>
     <header>
         <section class="navigation-section">
+            <div class="navigation-container">
+                <img class="logo" src="./assests/images/cropped-cropped-YourPeptideBrand.com-LOGO-2.svg"
+                    alt="logo of the website Your peptide template">
+            </div>
 
         </section>
     </header>
