add main navigation list items

--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             <div class="navigation-container">
                 <img class="logo" src="./assests/images/cropped-cropped-YourPeptideBrand.com-LOGO-2.svg"
                     alt="logo of the website Your peptide template">
+                <nav class="main-navigaton-container">
+                    <ul class="main-navigaton-list">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">White Label Peptides</a></li>
+                    </ul>
+                </nav>
             </div>
 
         </section>
